# QuietCheck

./: .gitignore  QuietCheck.docx  README.md
Pi/: data_base.py  main.py  mqttComms.py  mqtt_comms.py  noiseDetection.db
espNoiceMeter/: CMakeLists.txt
espNoiceMeter/main/: CMakeLists.txt  main.c
